# ant

./: CMakeLists.txt
demo/: CMakeLists.txt  sstring_test.cpp  timer_manager_test.cc
include/: timer_manager.hh
include/ant/: bitset_iter.hh  byteorder.hh  cacheline.hh  deleter.hh  lowres_clock.hh  lowres_timer_manager.hh  manual_clock.hh  posix.hh  print.hh  sstring.hh  temporary_buffer.hh  timer.hh  timer_manager.hh  timer_set.hh  unaligned.hh
include/ant/net/: byteorder.hh  inet_address.hh  ip.hh  socket_defs.hh
include/ant/util/: defer.hh  noncopyable.hh  noncopyable_function.hh  std-compat.hh  std_compat.hh
src/: lowres_timer_manager.cc  timer_manager.cc
src/net/: inet_address.cc  ip.cc
test/: noncopyable_function_test.cc
